# linux-firmware-corpus

./: .gitignore  README.md  Vagrantfile  prepare
downscaling/: README.md  _build_corpus.py  build_corpus  prepare
notebooks/: README.md  jupyter  prepare  prepare.bash  requirements.txt
notebooks/notebooks/: IV_literature_review.ipynb  V_lfwc.ipynb  _mask_lfwc.ipynb
notebooks/notebooks/html_output/: IV_literature_review.html  V_lfwc.html  _mask_lfwc.html
notebooks/public_data/: lfwc-failed-masked.csv  literature_overview.csv  literature_results.csv  routersploit_mapping.json
replication/: README.md  Vagrantfile  prepare  pyproject.toml  replicate-lfwc
replication/replicate_lfwc/: __init__.py  __main__.py  fact.py  types.py  utils.py
replication/scripts/: fetch-wayback-urls.py
scrapers/: LICENSE  README.md  prepare  pyproject.toml  scrape  scrapy.cfg
scrapers/lfwc_scraper/: custom_spiders.py  handlers.py  items.py  middlewares.py  pipelines.py  settings.py
scrapers/lfwc_scraper/spiders/: archive_avm.py  archive_linksys.py  asus.py  avm.py  dlink.py  edimax.py  engenius.py  linksys.py  netgear.py  tplink.py  trendnet.py  ubiquiti.py
